main_page_style.css
html {
  height: 100%;
  font-family: "Ubuntu", sans-serif;
  font-size: 30px;
}

button {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: black;
}

ul {
  list-style: none;
}

main {
  display: inline-grid;
  grid-column: 2/4;
  grid-row: 2/3;
}
body {
  display: grid;
  grid-template-columns: 1fr 2fr 3fr 1fr;
  grid-template-rows: 1fr 3fr min-content;
  background-color: #f8edeb;
  min-height: 100%;
  margin: 0px;
}

header {
  background-color: #fcd5ce;
  grid-row: 1/2;
  grid-column: 2/4;
  display: grid;
  grid-template-columns: 2fr 1fr 3fr;
}
nav {
  grid-column: 1/4;
  background-color: #f8ad9d;
}

.mobileMenu {
  width: 100%;
  height: 100%;
}

.mobileMenu > .mobileMenuContent {
  display: inline-flex;
  justify-content: space-evenly;
  align-items: center;
  vertical-align: middle;
  width: 100%;
  height: 100%;
}

.avatarWrapper {
  grid-column: 1/2;
  grid-row: 1/2;
  justify-self: center;
  align-self: center;
  border-radius: 50%;
}

.avatar {
  border-radius: 50%;
  width: 200px;
  height: 200px;
  justify-self: center;
  align-self: center;
}

.name {
  padding: 25px;
  font-size: 60px;
  position: relative;
  border: black solid 2px;
  grid-column: 3/4;
  grid-row: 1/2;
  justify-self: center;
  align-self: center;
  text-transform: uppercase;
  align-content: center;
}

.job {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  font-size: 30px;
  top: 100px;
  left: 50px;
  right: 50px;
  text-align: center;
  background-color: #fcd5ce;
}

.col1 {
  background-color: #fae1dd;
  grid-column: 1/3;
  grid-row: 2/3;
}

.fa-github,
.fa-user,
.fa-map-marker-alt,
.fa-calendar-alt,
.fa-phone-alt,
.fa-envelope {
  font-size: 30px;
  padding: 5px 0px 5px 0px;
}
.fa-heart {
  color: #f08080;
}

.iconWrapper {
  display: inline-flex;
  align-items: center;
}

.icon {
  width: 55px;
  height: 55px;
}

.title {
  text-transform: uppercase;
  margin: 2px 0px 2px 0px;
  font-weight: 500;
  font-size: 50px;
  z-index: 2;
  position: absolute;
}
ul {
  line-height: 50px;
}
.underlineBox {
  position: absolute;
  width: 200px;
  height: 25px;
  background-color: #f08080;
  top: 35px;
}

.skillsDescription {
  margin-top: 20px;
}

h2 {
  margin: 10px 0px 2px 0px;
  font-size: 35px;
  font-weight: 500;
}

.group {
  display: flex;
  flex-direction: column;
  margin-left: 40px;
  margin-top: 80px;
}

.titleWrapper {
  position: relative;
  margin-bottom: 40px;
}

.col2 {
  background-color: #fae1dd;
  grid-column: 3/4;
  grid-row: 2/3;
  padding-right: 40px;
}

.period {
  display: flex;
  justify-content: space-between;
}
.work {
  list-style: disc;
}
.jobTitle {
  margin: 20px 0px 0px 0px;
  font-weight: 500;
}
.jobDate {
  margin: 20px 0px 0px 0px;
}

footer {
  padding: 30px 0px;
  background-color: #fcd5ce;
  grid-column: 2/4;
  grid-row: 3/4;
  place-items: start stretch;
  text-align: center;
}
.mobileMenu > .button {
  display: none;
}

@media only screen and (max-width: 1366px) {
  body {
    grid-template-columns: 2fr 3fr;
  }
  main {
    grid-column: 1/3;
  }
  footer {
    grid-column: 1/3;
  }
  header {
    grid-column: 1/3;
  }
  .col1 {
    grid-column: 1/2;
  }
  .col2 {
    grid-column: 2/3;
  }
}

@media only screen and (max-width: 1280px) {
  body {
    display: flex;
    flex-flow: row wrap;
  }
  main {
    display: flex;
    flex-flow: row wrap;
    width: 100%;
  }
  .mobileMenu {
    margin-bottom: 25px;
  }
  footer {
    width: 100%;
  }
  header {
    width: 100%;
  }
  .col1 {
    width: 100%;
  }
  .col2 {
    width: 100%;
  }
}
@media only screen and (max-width: 1100px) {
  .mobileMenu > .mobileMenuContent > a {
    font-size: 25px;
    padding: 5px;
  }
}

@media only screen and (max-width: 900px) {
  body {
    font-size: 18px;
  }
  h1 {
    font-size: 30px;
  }
  .underlineBox {
    height: 18px;
    top: 20px;
  }
  .title {
    font-size: 30px;
  }
  h2 {
    font-size: 22px;
  }
  .name {
    font-size: 20px;
    padding: 20px;
  }
  .job {
    font-size: 15px;
    top: 55px;
    left: 40px;
    right: 40px;
  }
  .avatar {
    width: 100px;
    height: 100px;
  }
  nav {
    position: relative;
  }
  .mobileMenu > .mobileMenuContent {
    position: absolute;
    display: none;
    flex-flow: row wrap;
    background-color: #f08080;
    height: max-content;
    left: 0px;
    top: 85px;
  }
  .mobileMenu {
    font-size: 30px;
    display: block;
    margin: 25px 10px;
  }
  .mobileMenu > .mobileMenuContent > a {
    width: 100%;
    padding: 5px 5px 5px 10px;
  }
  .mobileMenu > .mobileMenuContent > a:hover {
    background-color: #f8ad9d;
  }
  .mobileMenu > .button {
    display: block;
  }
  .mobileMenu:hover .mobileMenuContent {
    display: flex;
    width: 200px;
  }
  .mobileMenu > .mobileMenuContent:hover {
    display: flex;
    width: 200px;
  }
}

